Fix bleed issue on supernova and pluto modules

--- a/src/scss/transplant/modules/layout/_pluto.scss
+++ b/src/scss/transplant/modules/layout/_pluto.scss
@@ -36,6 +36,7 @@
     margin: 0;
     color: $white;
     text-align: left;
+    box-sizing:border-box;
     > div {
         display: table-cell;
         vertical-align: middle;
